# TFCompetitiva

./: $null  .gitignore  DataSet.xlsx  DataSet_con_cedula.xlsx
ai-service/: README.md  package-lock.json  package.json
ai-service/config/: contexts.json
ai-service/src/: server.js
ai-service/src/routes/: chatRoutes.js
ai-service/src/services/: ollamaService.js
backend/: .env.example  .gitignore  package.json  prueba_algoritmos.js  reiniciarHistorial.js
backend/src/: app.js  server.js
backend/src/config/: database.js
backend/src/controllers/: adminController.js  authController.js  busquedasController.js  estadisticasController.js  reportesController.js  (+1 more)
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/bmb/: config.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
cpp-engine/: CMakeLists.txt  INSTRUCCIONES_WINDOWS.txt  LISTO_PARA_COMPILAR.txt  README.md  compilar_mingw.bat  compilar_visual_studio.bat  probar.bat  probar_multiple.bat
cpp-engine/data/: sospechosos_test.csv
cpp-engine/include/: aho_corasick.h  algorithm_selector.h  csv_parser.h  json_output.h  kmp.h  rabin_karp.h
cpp-engine/src/: main.cpp
cpp-engine/src/algorithms/: aho_corasick.cpp  kmp.cpp  rabin_karp.cpp
cpp-engine/src/utils/: algorithm_selector.cpp  csv_parser.cpp  json_output.cpp
docs/: API_REFERENCE.md  GUIA_LECTURA_CODIGO.md  MEJORAS_BUSQUEDA.md  epics.md  prd.md
frontend/: package-lock.json  package.json
frontend/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.js
(+51 files in other folders)
